--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
+    <load src="partials/section-dz.html" />
 
     <main>
       <load src="partials/hero.html" />
