--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
-
+    <load src="partials/section-az.html" />
     <main>
       <load src="partials/hero.html" />
       <!-- Loads the specified .html file -->
