--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <main>
       <load src="partials/hero.html" />
       <!-- Loads the specified .html file -->
+      <load src="partials/section-vp.html" />
       <load src="partials/vite-promo.html" />
     </main>
 
